# awesome-llm-apps

./: README.md
starter_ai_agents/ai_blog_to_podcast_agent/: blog_to_podcast_agent.py  pyproject.toml
starter_ai_agents/ai_breakup_recovery_agent/: ai_breakup_recovery_agent.py  pyproject.toml
starter_ai_agents/ai_data_analysis_agent/: README.md  ai_data_analyst.py  pyproject.toml
