[project]
name = "ai-blog-to-podcast-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.2.10",
    "elevenlabs>=1.0.0",
    "firecrawl-py>=4.6.0",
    "google-genai>=1.52.0",
    "openai>=1.102.0",
    "requests>=2.32.5",
    "streamlit>=1.40.2",
]
[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple"
#url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
