[project]
name = "ai-breakup-recovery-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.2.10",
    "ddgs>=9.9.1",
    "duckduckgo-search>=8.1.1",
    "elevenlabs>=2.24.0",
    "google-genai>=1.52.0",
    "pillow==11.1.0",
    "streamlit==1.44.1",
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple"
#url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
