[project]
name = "ai-data-analysis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.2.10",
    "duckdb>=1.4.1",
    "google-genai>=1.52.0",
    "numpy==1.26.4",
    "openai>=2.8.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "streamlit==1.41.1",
]


[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple"
#url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
